# Tickstream

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main  main.cpp  main.py  test.cpp
.github/workflows/: CI.yaml
benchmarks/: benchmark.cpp
scripts/: main.py
src/: fileManager.cpp  fileManager.h  fileManager.hpp  main.cpp  marketData.cpp  marketData.hpp  mergeBuffer.hpp  parser.cpp  parser.h  pch.hpp  pipeline.cpp  pipeline.h  pipeline.hpp  strategy.cpp
